--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ plugins:
 # in order as they should show up.
 header_pages:
   - about.md
-  - cv.md
-  - music.md
+  - awards.md
+  - arts.md
   - updates.md
 
 # Set to `true` to show excerpts on the homepage.
